// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event.filter should drop undefined values: evenNum event graph 1`] = `
"Seq [
  1. emit {{
     \\"subtype\\": \\"event\\",
     \\"fullName\\": \\"number →? *\\"
  }},
  2. [
     *  run {{}}
  ]
]"
`;

exports[`event.filter should drop undefined values: num event graph 1`] = `
"Seq [
  1. emit {{
     \\"subtype\\": \\"event\\",
     \\"fullName\\": \\"number\\"
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. emit {{
              \\"subtype\\": \\"event\\",
              \\"fullName\\": \\"number →? *\\"
           }},
           2. [
              *  run {{}}
           ]
        ]
     ]
  ]
]"
`;
